ひでかずさんチェック依頼・TOPページ完成

--- a/high-level/index.html
+++ b/high-level/index.html
@@ -451,7 +451,48 @@
             </div>
         </main>
         <footer class="footer">
-
+            <div class="footer-inner">
+                <div class="footer__left">
+                    <a href="index.html" class="footer__left-logo">
+                        <img src="images/tetote-logo-black.png" alt="ロゴ">
+                    </a>
+                    <p class="footer__left-copyright en">© 2024 TETOTE All Right Reserved.</p>
+                </div>
+                <div class="footer__right">
+                    <div class="footer__right-list">
+                        <ul class="footer__right-list-row">
+                            <li><a href="index.html">ホーム</a></li>
+                            <li><a href="about-us.html">TETOTEについて</a></li>
+                            <li><a href="staff.html">人を知る</a></li>
+                            <li><a href="career.html">研修制度とキャリアパス</a></li>
+                            <li><a href="benefits.html">福利厚生</a></li>
+                        </ul>
+                        <ul class="footer__right-list-row">
+                            <li><a href="index.html">採用ブログ</a></li>
+                            <li><a href="about-us.html">募集要項</a></li>
+                            <li><a href="staff.html">よくある質問</a></li>
+                            <li><a href="career.html">会社概要</a></li>
+                        </ul>
+                    </div>
+                    <ul class="footer__right-icons">
+                        <li>
+                            <a href="#" target="_blank" class="footer__right-icons-item">
+                                <img src="images/facebook.svg" alt="Facebookアイコン">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank" class="footer__right-icons-item">
+                                <img src="images/twitter.svg" alt="Twitterアイコン">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank" class="footer__right-icons-item">
+                                <img src="images/youtube.svg" alt="YouTubeアイコン">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
