ひでかずさん質問時、目次サイドバーがスクロール追従しない

--- a/high-level/staff.html
+++ b/high-level/staff.html
@@ -143,118 +143,128 @@
                 </nav>
                 <section class="page-staff">
                     <div class="page-staff-inner">
-                        <ul class="page-staff__list-upper">
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain01.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                        <div class="page-staff__container">
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain01.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>「あなたが担当で良かった」</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>この一言が、最高のやりがい</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">コンサルタント</p>
-                                        <p class="member__slider-item_profile-joined">2011年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">コンサルタント</p>
+                                        <p class="staff-card_profile-joined">2011年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">西村 優</p>
+                                    <p class="staff-card_profile-name">西村 優</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain02.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain02.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>全力で考えぬける環境</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>試練の数だけ強くなれました</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">コンサルタント</p>
-                                        <p class="member__slider-item_profile-joined">2015年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">コンサルタント</p>
+                                        <p class="staff-card_profile-joined">2015年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">橋本 拓也</p>
+                                    <p class="staff-card_profile-name">橋本 拓也</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain03.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>                            
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain03.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>お客様も知らない課題を</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>一緒に探し出す醍醐味</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">ソリューション営業</p>
-                                        <p class="member__slider-item_profile-joined">2017年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">ソリューション営業</p>
+                                        <p class="staff-card_profile-joined">2017年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">青木 美月</p>
+                                    <p class="staff-card_profile-name">青木 美月</p>
                                 </div>
-                            </li>
-                        </ul>
-                        <ul class="page-staff__list-downer">
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain04.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>                            
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain04.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>ビジネスの課題を</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>データで解決する醍醐味</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">データサイエンティスト</p>
-                                        <p class="member__slider-item_profile-joined">2002年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">データサイエンティスト</p>
+                                        <p class="staff-card_profile-joined">2002年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">高橋 智</p>
+                                    <p class="staff-card_profile-name">高橋 智</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain05.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain05.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>どんな難解な案件も</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>チームで突破できる強い連携</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">コンサルタント</p>
-                                        <p class="member__slider-item_profile-joined">2006年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">コンサルタント</p>
+                                        <p class="staff-card_profile-joined">2006年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">高田 凛</p>
+                                    <p class="staff-card_profile-name">高田 凛</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain06.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>
+                            <div class="page-staff__container-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain06.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>お客様と一緒に開発</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>豊富なプライム案件が魅力です</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">システム事業部課長</p>
-                                        <p class="member__slider-item_profile-joined">2007年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">システム事業部課長</p>
+                                        <p class="staff-card_profile-joined">2007年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">橘 光</p>
+                                    <p class="staff-card_profile-name">橘 光</p>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <div class="cta">
