--- a/high-level/staff:01-nishimura.html
+++ b/high-level/staff:01-nishimura.html
@@ -159,7 +159,7 @@
                 <section class="page-staff-personal__interview">
                     <div class="page-staff-personal__interview-inner">
                         <div class="page-staff-personal__interview-contents">
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-1">
                                 <h2 class="page-staff-personal__interview-section-heading">普段の業務内容について</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     TETOTEのコンサルティング本部で、ITコンサルタントとして勤務しています。主な業務内容は、以下の3つです。<br>
@@ -178,7 +178,7 @@
                                     これらの業務を通して、クライアント企業のIT戦略の立案から実行までを支援し、課題解決に貢献しています。
                                 </p>
                             </div>
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-2">
                                 <h2 class="page-staff-personal__interview-section-heading">学生時代に力を入れたことは？</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     学生時代に力を入れたことは、ロボットプログラミングサークルでの活動です。<br>
@@ -188,7 +188,7 @@
                                     この経験は、現在の仕事、つまり、クライアントの課題を解決するために、必要な知識を積極的に学び、チームメンバーと協力して課題を解決する、ここに活かされています。
                                 </p>
                             </div>
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-3">
                                 <h2 class="page-staff-personal__interview-section-heading">TETOTEを志望した理由は？</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     IT戦略策定からシステム導入まで一貫して支援できる点です。<br>
@@ -196,7 +196,7 @@
                                     TETOTEは、IT戦略策定から導入まで一貫して支援できる数少ないコンサルティング会社です。自分の技術力と経営視点を活かし、課題解決に貢献したいという想いを叶えられる環境だと確信しました。<br>
                                 </p>
                             </div>
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-4">
                                 <h2 class="page-staff-personal__interview-section-heading">やりがいを感じる瞬間は？</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     特に印象深いのは、大手製造業のA社でのプロジェクトです。A社は、生産管理システムの老朽化により、作業効率の低下とコスト増加に悩んでいました。<br>
@@ -205,14 +205,14 @@
                                     この経験を通して、ITの力でクライアントの課題解決に貢献できる仕事の価値を実感しました。
                                 </p>
                             </div>
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-5">
                                 <h2 class="page-staff-personal__interview-section-heading">どんな人と一緒に働きたい？</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     自分の考えを相手に分かりやすく伝え、相手の意見を尊重できる人です。<br>
                                     このような人々と共に働くことで、互いに刺激を与え合い、より高いレベルを目指していけると考えています。
                                 </p>
                             </div>
-                            <div class="page-staff-personal__interview-section">
+                            <div class="page-staff-personal__interview-section" id="section-6">
                                 <h2 class="page-staff-personal__interview-section-heading">応募者へのメッセージ</h2>
                                 <p class="page-staff-personal__interview-section-desc">
                                     TETOTEは、「ITの力で社会課題を解決する」というビジョンを掲げ、日々成長している会社です。<br>
@@ -226,12 +226,12 @@
                                 <p>目次</p>
                             </div>
                             <ul  class="page-staff-personal__interview-toc__list">
-                                <li><a href="#">・普段の業務内容について</a></li>
-                                <li><a href="#">・学生時代に力を入れたことは？</a></li>
-                                <li><a href="#">・TETOTEを志望した理由は？</a></li>
-                                <li><a href="#">・やりがいを感じる瞬間は？</a></li>
-                                <li><a href="#">・どんな人と一緒に働きたい？</a></li>
-                                <li><a href="#">・応募者へのメッセージ</a></li>
+                                <li><a href="#section-1">・普段の業務内容について</a></li>
+                                <li><a href="#section-2">・学生時代に力を入れたことは？</a></li>
+                                <li><a href="#section-3">・TETOTEを志望した理由は？</a></li>
+                                <li><a href="#section-4">・やりがいを感じる瞬間は？</a></li>
+                                <li><a href="#section-5">・どんな人と一緒に働きたい？</a></li>
+                                <li><a href="#section-6">・応募者へのメッセージ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -239,62 +239,68 @@
                 <div class="page-staff-personal__othermembers">
                     <div class="page-staff-personal__othermembers-inner">
                         <p class="page-staff-personal__othermembers-title">その他のメンバー</p>
-                        <ul class="page-staff__list-downer">
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain04.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                        <div class="page-staff-personal__othermembers-list">
+                            <div class="page-staff-personal__othermembers-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain04.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>ビジネスの課題を</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>データで解決する醍醐味</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">データサイエンティスト</p>
-                                        <p class="member__slider-item_profile-joined">2002年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">データサイエンティスト</p>
+                                        <p class="staff-card_profile-joined">2002年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">高橋 智</p>
+                                    <p class="staff-card_profile-name">高橋 智</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain05.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>
+                            <div class="page-staff-personal__othermembers-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain05.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>どんな難解な案件も</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>チームで突破できる強い連携</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">コンサルタント</p>
-                                        <p class="member__slider-item_profile-joined">2006年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">コンサルタント</p>
+                                        <p class="staff-card_profile-joined">2006年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">高田 凛</p>
+                                    <p class="staff-card_profile-name">高田 凛</p>
                                 </div>
-                            </li>
-                            <li class="page-staff__list-item member__slider-item">
-                                <img src="images/syain06.jpeg" alt="">
-                                <div class="member__slider-item_message-wrapper">
-                                    <div class="member__slider-item_message1">
+                            </div>
+                            <div class="page-staff-personal__othermembers-item staff-card">
+                                <div class="staff-card_image">
+                                    <img src="images/syain06.jpeg" alt="">
+                                </div>
+                                <div class="staff-card_message-wrapper">
+                                    <div class="staff-card_message1">
                                         <p>お客様と一緒に開発</p>
                                     </div>
-                                    <div class="member__slider-item_message2">
+                                    <div class="staff-card_message2">
                                         <p>豊富なプライム案件が魅力です</p>
                                     </div>
                                 </div>
-                                <div class="member__slider-item_profile">
-                                    <div class="member__slider-item_profile-sub">
-                                        <p class="member__slider-item_profile-role">システム事業部課長</p>
-                                        <p class="member__slider-item_profile-joined">2007年入社</p>
+                                <div class="staff-card_profile">
+                                    <div class="staff-card_profile-sub">
+                                        <p class="staff-card_profile-role">システム事業部課長</p>
+                                        <p class="staff-card_profile-joined">2007年入社</p>
                                     </div>
-                                    <p class="member__slider-item_profile-name">橘 光</p>
+                                    <p class="staff-card_profile-name">橘 光</p>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="cta">
